--- a/index.html
+++ b/index.html
@@ -14,6 +14,28 @@
     <div id="work">My Work</div>
     <div id="contact">Contact Me</div>
   </nav>
+
+<div class="about">About Me</div>
+  <p>
+    <br><br>
+
+    <figure>
+      <img src="olivia-photo.jpg" alt="Photo of Olivia Hall sitting outside wearing rock climbing gear" width="50%">
+      <figcaption>Photo of me! Courtesy of  Madhav Singh (<a href="https://www.instagram.com/_madhav/">@_madhav</a>)  
+      </figcaption>
+    </figure>
+    
+    <br>
+    
+    <p> Hi, didn’t see ya there! My name is Olivia Hall. I’m originally from Dayton, Ohio, but I’ve lived in 10 different states doing seasonal work in the fields of conservation and outdoor education. 
+      <br><br>I value community, connection, and humor. Besides my variety of seasonal work, I also volunteer with a number of different organizations, primarily ones that are focused on uplifting underrepresented people in spaces ranging from outdoor recreation to the tech industry.
+      <br><br>Outside of technology and design, I have a plethora of interests including outdoor pursuits (primarily rock climbing but also biking, whitewater paddling, and hiking), arts and crafts, and media (reading, listening to music, and watching television, movies, and video essays).</p>
+  </p>
+
+
+
+
+
   
 </body>
 
