--- a/index.html
+++ b/index.html
@@ -41,7 +41,15 @@
 
 <div>
   <h2 class="work" id="work">My Work</h2>
-
+    <h3>My Links</h3>
+      <a href="https://www.linkedin.com/in/olivia-hall-9569642b1/">My LinkedIn!</a>
+        <br><br>
+      <a href="https://github.com/ohall3254">MyGitHub</a>
+    <h3>My Projects</h3>
+      <div class="thumbnail"><a href="https://as2.ftcdn.net/v2/jpg/05/79/68/85/1000_F_579688567_hmuT3hnFxTeDBXsyUUsmvB6Kvt0UF8Bd.jpg">coming soon!</a></div>
+      <div class="thumbnail"><a href="https://as2.ftcdn.net/v2/jpg/05/79/68/85/1000_F_579688567_hmuT3hnFxTeDBXsyUUsmvB6Kvt0UF8Bd.jpg">coming soon!</a></div>
+      <div class="thumbnail"><a href="https://as2.ftcdn.net/v2/jpg/05/79/68/85/1000_F_579688567_hmuT3hnFxTeDBXsyUUsmvB6Kvt0UF8Bd.jpg">coming soon!</a></div>
+      <div class="thumbnail"><a href="https://as2.ftcdn.net/v2/jpg/05/79/68/85/1000_F_579688567_hmuT3hnFxTeDBXsyUUsmvB6Kvt0UF8Bd.jpg">coming soon!</a></div>
 </div>
 
 <div>
